--- a/index.html
+++ b/index.html
@@ -37,42 +37,9 @@
     <div class="chat-container">
         <div class="welcome-section" id="welcomeSection">
             <div class="agent-core">
-                <div class="core-glow"></div>
-                <svg class="core-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><circle cx="12" cy="12" r="1.5"></circle><circle cx="12" cy="12" r="10"></circle><path d="M12 2v2M12 20v2M2 12h2M20 12h2M5 5l2 2M17 17l2 2M5 19l2-2M17 7l2-2"></path></svg>
-            </div>
-            <h1 class="welcome-title" id="welcome-greeting">Good evening.</h1>
-            <p class="welcome-subtitle">I am DVNC. I synthesize knowledge across disciplines to solve complex problems. Present your challenge.</p>
-        </div>
-
-        <div class="chat-messages" id="chatMessages">
-            </div>
-    </div>
-
-    <div class="input-container">
-        <div class="input-wrapper">
-            <div class="agent-input-group">
-                <button class="input-icon-btn" id="attachFileBtn" title="Attach File">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"/></svg>
-                </button>
-                <input 
-                    type="text" 
-                    id="messageInput" 
-                    class="agent-input" 
-                    placeholder="Pose a problem or design challenge..."
-                    autocomplete="off"
-                >
-                <button id="sendButton" class="input-icon-btn send-btn" title="Send (Enter)">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg>
-                </button>
-            </div>
-            
-            <div class="agent-status-bar">
-                <div class="suggested-actions" id="suggestedActions">
-                    </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                <svg class="systems-thinking-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <radialGradient id="coreGlow" cx="50%" cy="50%" r="50%">
+                            <stop offset="0%" stop-color="var(--primary)" stop-opacity="0.3"/>
+                            <stop offset="100%" stop-color="var(--primary)" stop-opacity="0"/>
+                        </
