--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         <nav class="agent-nav">
             <div class="nav-content">
                 <a href="#" class="logo" id="logoHome">
-                    <svg width="110" height="24" viewBox="0 0 110 24">
+                    <svg width="110" height="24" viewBox="0 0 110 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <defs>
                             <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                                 <stop offset="0%" style="stop-color:var(--primary);" />
                                 <stop offset="100%" style="stop-color:var(--primary-dark);" />
                             </linearGradient>
                         </defs>
-                        <text x="0" y="18" font-family="'Inter', sans-serif" font-size="20" font-weight="600" letter-spacing="-0.5" fill="var(--text-primary)">
+                        <circle cx="8" cy="12" r="3" fill="url(#logoGradient)"/>
+                        <path d="M8 9V3M8 15V21M3 12H9M12 12H18" stroke="url(#logoGradient)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <text x="20" y="18" font-family="'Inter', sans-serif" font-size="20" font-weight="600" letter-spacing="-0.5" fill="var(--text-primary)">
                             DVNC
                             <tspan fill="url(#logoGradient)">.AI</tspan>
                         </text>
